# Bitcredit-Core

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  deny.toml  docker-compose.yml  justfile
.cargo/: config.toml
.github/: copilot-instructions.md
crates/bcr-ebill-api/: Cargo.toml
crates/bcr-ebill-api/src/: constants.rs  lib.rs
crates/bcr-ebill-api/src/data/: mod.rs
crates/bcr-ebill-api/src/persistence/: mod.rs
crates/bcr-ebill-api/src/service/: backup_service.rs  company_service.rs  contact_service.rs  file_reference_helper.rs  file_reference_tests.rs  file_server_service.rs  file_upload_service.rs  identity_proof_service.rs  identity_service.rs  mod.rs  search_service.rs
crates/bcr-ebill-api/src/service/bill_service/: blocks.rs  data_fetching.rs  error.rs  issue.rs  mod.rs  payment.rs  propagation.rs  service.rs  sharing.rs  test_utils.rs  tests.rs
crates/bcr-ebill-api/src/service/notification_service/: default_service.rs  event.rs  mod.rs  nostr.rs  service.rs  test_utils.rs  transport.rs
crates/bcr-ebill-api/src/service/notification_service/event/: bill_events.rs  blockchain_event.rs  company_events.rs  contact.rs  identity_events.rs  mod.rs
crates/bcr-ebill-api/src/service/transport_service/: block_transport.rs  chain_keys.rs  contact_transport.rs  mod.rs  notification_transport.rs  restore.rs  service.rs  transport.rs  transport_client.rs
crates/bcr-ebill-api/src/tests/: mod.rs
crates/bcr-ebill-api/src/util/: file.rs  mod.rs
crates/bcr-ebill-core/: Cargo.toml
crates/bcr-ebill-core/src/: address.rs  block_id.rs  city.rs  company.rs  constants.rs  contact.rs  country.rs  date.rs  email.rs  hash.rs  identification.rs  identity_proof.rs  lib.rs  name.rs  nostr_contact.rs  notification.rs  signature.rs  sum.rs  timestamp.rs  zip.rs
crates/bcr-ebill-core/src/application/: company.rs  event.rs  identity_proof.rs  mod.rs  nostr_contact.rs  notification.rs
crates/bcr-ebill-core/src/application/bill/: mod.rs
crates/bcr-ebill-core/src/application/contact/: mod.rs  validation.rs
crates/bcr-ebill-core/src/application/identity/: mod.rs  validation.rs
crates/bcr-ebill-core/src/bill/: mod.rs  validation.rs
crates/bcr-ebill-core/src/blockchain/: mod.rs
crates/bcr-ebill-core/src/blockchain/bill/: block.rs  chain.rs  mod.rs
crates/bcr-ebill-core/src/blockchain/company/: mod.rs
crates/bcr-ebill-core/src/blockchain/identity/: mod.rs
crates/bcr-ebill-core/src/contact/: mod.rs  validation.rs
crates/bcr-ebill-core/src/identity/: mod.rs  validation.rs
crates/bcr-ebill-core/src/mint/: mod.rs
crates/bcr-ebill-core/src/protocol/: bill_events.rs  blockchain_event.rs  company_events.rs  constants.rs  contact.rs  file_reference.rs  identity_events.rs  mod.rs
crates/bcr-ebill-core/src/protocol/base/: address.rs  block_id.rs  city.rs  country.rs  date.rs  email.rs  hash.rs  identification.rs  identity_proof.rs  mod.rs  name.rs  signature.rs  sum.rs  timestamp.rs  zip.rs
crates/bcr-ebill-core/src/protocol/blockchain/: mod.rs
crates/bcr-ebill-core/src/protocol/blockchain/bill/: block.rs  chain.rs  mod.rs  participant.rs  validation.rs
crates/bcr-ebill-core/src/protocol/blockchain/company/: block.rs  chain.rs  mod.rs  validation.rs
crates/bcr-ebill-core/src/protocol/blockchain/identity/: mod.rs  validation.rs
crates/bcr-ebill-core/src/protocol/crypto/: bcrkeys.rs  btc.rs  mod.rs
crates/bcr-ebill-core/src/protocol/event/: bill_events.rs  blockchain_event.rs  company_events.rs  identity_events.rs  mod.rs
crates/bcr-ebill-core/src/protocol/mint/: mod.rs
crates/bcr-ebill-core/src/protocol/serialization/: mod.rs
crates/bcr-ebill-core/src/protocol/tests/: mod.rs
crates/bcr-ebill-core/src/tests/: mod.rs
crates/bcr-ebill-core/src/util/: borsh.rs  crypto.rs  date.rs  mod.rs
crates/bcr-ebill-persistence/: Cargo.toml
crates/bcr-ebill-persistence/src/: backup.rs  bill.rs  company.rs  constants.rs  contact.rs  file_reference.rs  file_upload.rs  identity.rs  identity_proof.rs  lib.rs  mint.rs  nostr.rs  notification.rs
crates/bcr-ebill-persistence/src/db/: backup.rs  bill.rs  bill_chain.rs  company.rs  company_chain.rs  contact.rs  email_notification.rs  file_reference.rs  file_upload.rs  identity.rs  identity_chain.rs  identity_proof.rs  mint.rs  mod.rs  nostr_chain_event.rs  nostr_contact_store.rs  nostr_event_offset.rs  nostr_send_queue.rs  notification.rs
crates/bcr-ebill-persistence/src/db/surreal/: datastore.rs  mod.rs
crates/bcr-ebill-persistence/src/tests/: mod.rs
crates/bcr-ebill-transport/: Cargo.toml
crates/bcr-ebill-transport/src/: block_transport.rs  chain_keys.rs  contact_transport.rs  lib.rs  nostr.rs  nostr_transport.rs  notification_service.rs  notification_transport.rs  push_notification.rs  relay_sync.rs  test_utils.rs  transport.rs  transport_service.rs
crates/bcr-ebill-transport/src/email/: email_sendgrid.rs
crates/bcr-ebill-transport/src/event/: bill_blockchain_event.rs  bill_chain_event.rs  bill_events.rs  company_events.rs  identity_events.rs  mod.rs
crates/bcr-ebill-transport/src/handler/: bill_action_event_handler.rs  bill_chain_event_handler.rs  bill_chain_event_processor.rs  bill_invite_handler.rs  company_chain_event_handler.rs  company_chain_event_processor.rs  company_invite_handler.rs  contact_share_handler.rs  direct_message_event_processor.rs  file_metadata_processor.rs  identity_chain_event_handler.rs  identity_chain_event_processor.rs  inbound_file_anchor.rs  mod.rs  nostr_contact_processor.rs  public_bill_chain_event_handler.rs  public_chain_helpers.rs  restore.rs
crates/bcr-ebill-transport/src/restore/: mod.rs
crates/bcr-ebill-wasm/: Cargo.toml  index.html  main.js
crates/bcr-ebill-wasm/src/: context.rs  error.rs  job.rs  lib.rs
crates/bcr-ebill-wasm/src/api/: bill.rs  company.rs  contact.rs  general.rs  identity.rs  identity_proof.rs  mod.rs  notification.rs
crates/bcr-ebill-wasm/src/data/: bill.rs  company.rs  contact.rs  identity.rs  identity_proof.rs  mint.rs  mod.rs  notification.rs
crates/bcr-ebill-wasm/src/util/: mod.rs
docs/: bdk.md  concepts.md  esplora.md  index.md  (+5 more)
(+18 files in other folders)
