[workspace.package]
version = "0.4.6"
edition = "2024"
license = "MIT"

[workspace]
resolver = "3"
members = [
  "crates/bcr-ebill-core",
  "crates/bcr-ebill-persistence",
  "crates/bcr-ebill-transport",
  "crates/bcr-ebill-api",
  "crates/bcr-ebill-wasm",
]

[profile.release]
opt-level = "s"   # Optimize for size ("z" can be used for even more aggressive size reduction)
lto = true        # Enable Link-Time Optimization
codegen-units = 1 # Reduces binary size at the cost of compile time

[profile.dev]
opt-level = 1 # Avoid surrealdb index out of bounds issue in dev build

[workspace.dependencies]
sha2 = { version = "0.10", default-features = false }
borsh = "1.5"
borsh-derive = "1.5"
log = { version = "0.4", features = ["serde"] }
chrono = { version = "0.4", default-features = false, features = [
  "serde",
  "clock",
] }
tokio = { version = "1.46", default-features = false, features = [
  "rt",
  "sync",
  "macros",
  "time",
] }
tokio_with_wasm = { version = "0.8", features = ["rt", "sync", "macros", "time"] }
async-trait = "0.1"
serde_json = "1"
serde = { version = "1", default-features = false, features = ["derive"] }
serde_repr = "0.1"
futures = { version = "0.3", default-features = false }
anyhow = { version = "1", default-features = false }
thiserror = { version = "2", default-features = false }
uuid = { version = "1", default-features = false, features = ["v4", "js"] }
bitcoin = { version = "0.32.7", default-features = false, features = ["serde"] }
bip39 = { version = "2.1", features = ["rand"] }
ecies = { version = "0.2", default-features = false, features = ["pure"] }
nostr = { version = "0.43" }
nostr-sdk = { version = "0.43", features = ["nip04", "nip59"] }
getrandom = { version = "0.3.1", features = ["wasm_js"] }
async-broadcast = "0.7.2"
rstest = "0.26"
secp256k1 = { version = "0.29" }
reqwest = { version = "0.12", default-features = false }
miniscript = { version = "12.3" }
base64 = "0.22"
mockall = "0.13.1"
bcr-ebill-core = { path = "./crates/bcr-ebill-core" }
bcr-ebill-api = { path = "./crates/bcr-ebill-api" }
bcr-ebill-persistence = { path = "./crates/bcr-ebill-persistence" }
bcr-ebill-transport = { path = "./crates/bcr-ebill-transport" }
surrealdb = { version = "2.3", default-features = false }
url = { version = "2.5" }
