[package]
name = "bcr-ebill-api"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
doctest = false

[dependencies]
borsh.workspace = true
borsh-derive.workspace = true
chrono.workspace = true
async-trait.workspace = true
serde_json.workspace = true
serde.workspace = true
serde_repr.workspace = true
log.workspace = true
anyhow.workspace = true
thiserror.workspace = true
uuid.workspace = true
bitcoin.workspace = true
miniscript.workspace = true
nostr-sdk.workspace = true
nostr.workspace = true
futures.workspace = true
infer = { version = "0.19.0", default-features = false }
bcr-ebill-core = { path = "../bcr-ebill-core" }
bcr-ebill-persistence = { path = "../bcr-ebill-persistence" }
bcr-ebill-transport = { path = "../bcr-ebill-transport" }
tokio.workspace = true
tokio_with_wasm.workspace = true
secp256k1.workspace = true
bcr-wdc-webapi = { git = "https://github.com/BitcreditProtocol/wildcat", tag = "v0.2.0" }
bcr-wdc-quote-client = { git = "https://github.com/BitcreditProtocol/wildcat", tag = "v0.2.0" }
bcr-wdc-key-client = { git = "https://github.com/BitcreditProtocol/wildcat", tag = "v0.2.0" }
bcr-wdc-swap-client = { git = "https://github.com/BitcreditProtocol/wildcat", tag = "v0.2.0" }
cashu = { version = "0.9", default-features = false }
rand = { version = "0.8" }
hex = { version = "0.4" }
url = {version = "2.5"}

[target.'cfg(target_arch = "wasm32")'.dependencies]
reqwest = { workspace = true, features = ["json"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
reqwest = { workspace = true, features = ["default", "json"] }

[dev-dependencies]
mockall = "0.13.1"
nostr-relay-builder = "0.42"
tokio.workspace = true
async-broadcast.workspace = true

[features]
embedded-db = ["bcr-ebill-persistence/embedded-db"]
