[package]
name = "bcr-ebill-api"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
doctest = false

[dependencies]
borsh.workspace = true
borsh-derive.workspace = true
chrono.workspace = true
async-trait.workspace = true
serde_json.workspace = true
serde.workspace = true
serde_repr.workspace = true
log.workspace = true
anyhow.workspace = true
thiserror.workspace = true
uuid.workspace = true
bitcoin.workspace = true
miniscript.workspace = true
nostr.workspace = true
futures.workspace = true
infer = { version = "0.19.0", default-features = false }
bcr-ebill-core.workspace = true
bcr-ebill-persistence.workspace = true
bcr-common.workspace = true
tokio.workspace = true
tokio_with_wasm.workspace = true
secp256k1.workspace = true
bcr-wallet-lib = { git = "https://github.com/BitcreditProtocol/Wallet-Core", tag = "v0.6.0" }
cashu = { version = "0.13", default-features = false }
rand = { version = "0.9" }
strum.workspace = true
hex = { version = "0.4" }
url.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
reqwest = { workspace = true, features = ["json"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
reqwest = { workspace = true, features = ["default", "json"] }

[dev-dependencies]
mockall.workspace = true
tokio.workspace = true
mockito.workspace = true
