[package]
name = "bcr-ebill-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
doctest = false

[dependencies]
borsh.workspace = true
borsh-derive.workspace = true
serde_json.workspace = true
serde.workspace = true
serde_repr.workspace = true
chrono.workspace = true
uuid.workspace = true
log.workspace = true
thiserror.workspace = true
bitcoin.workspace = true
bip39.workspace = true
ecies.workspace = true
nostr.workspace = true
secp256k1 = { workspace = true, features = ["global-context"] }
rust_decimal = { version = "1.36.0", default-features = false }
once_cell = "1.21.3"
url.workspace = true

[dev-dependencies]
rstest.workspace = true
