[package]
name = "bcr-ebill-persistence"
version = "0.3.12"
edition = "2024"
license = "MIT"

[lib]
doctest = false

[dependencies]
borsh.workspace = true
chrono.workspace = true
async-trait.workspace = true
serde_json.workspace = true
serde.workspace = true
log.workspace = true
thiserror.workspace = true
uuid.workspace = true
futures.workspace = true
nostr.workspace = true
bcr-ebill-core = { path = "../bcr-ebill-core" }
tokio.workspace = true
tokio_with_wasm.workspace = true
arc-swap = "1.7"

# Enable "kv-indxdb" only for WebAssembly (wasm32)
[target.'cfg(target_arch = "wasm32")'.dependencies]
surrealdb = { version = "2.3", default-features = false, features = [
  "kv-indxdb",
] }
base64 = "0.22"

# Enable "protocol-ws" for all other targets
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
surrealdb = { version = "2.3", default-features = false, features = ["protocol-ws"] }

[dev-dependencies]
surrealdb = { version = "2.3", features = ["kv-mem"], default-features = false }
base64 = "0.22"

[features]
embedded-db = ["surrealdb/kv-rocksdb"]
