[package]
name = "bcr-ebill-persistence"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
doctest = false

[dependencies]
borsh.workspace = true
chrono.workspace = true
async-trait.workspace = true
base64.workspace = true
serde_json.workspace = true
serde.workspace = true
log.workspace = true
thiserror.workspace = true
uuid.workspace = true
futures.workspace = true
nostr.workspace = true
bcr-ebill-core.workspace = true
bcr-common.workspace = true
tokio.workspace = true
tokio_with_wasm.workspace = true
bitcoin.workspace = true
url.workspace = true
arc-swap = "1.7"

# Enable "kv-indxdb" only for WebAssembly (wasm32)
[target.'cfg(target_arch = "wasm32")'.dependencies]
surrealdb = { workspace = true, default-features = false, features = ["kv-indxdb"] }

# Enable "protocol-ws" for all other targets
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
surrealdb = { workspace = true, default-features = false, features = ["protocol-ws"] }

[dev-dependencies]
surrealdb = { workspace = true, default-features = false, features = ["kv-mem"] }
