[package]
name = "bcr-ebill-transport"
version = "0.3.11"
edition = "2024"
license = "MIT"

[lib]
doctest = false

[dependencies]
bcr-ebill-core = { path = "../bcr-ebill-core" }
bcr-ebill-persistence = { path = "../bcr-ebill-persistence" }
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
nostr-sdk.workspace = true
nostr.workspace = true
log.workspace = true
tokio.workspace = true
reqwest.workspace = true
async-broadcast.workspace = true

[dev-dependencies]
mockall = "0.13.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
reqwest = { workspace = true, features = ["json"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
reqwest = { workspace = true, features = ["default", "json"] }
