[package]
name = "bcr-ebill-transport"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
doctest = false

[dependencies]
bcr-ebill-core.workspace = true
bcr-ebill-persistence.workspace = true
bcr-ebill-api.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
nostr-sdk.workspace = true
nostr.workspace = true
log.workspace = true
tokio.workspace = true
reqwest.workspace = true
async-broadcast.workspace = true
bitcoin.workspace = true
uuid.workspace = true
tokio_with_wasm.workspace = true
secp256k1.workspace = true
url.workspace = true

[dev-dependencies]
mockall.workspace = true
nostr-relay-builder = "0.43"
secp256k1.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
reqwest = { workspace = true, features = ["json"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
reqwest = { workspace = true, features = ["default", "json"] }
