[package]
name = "bcr-ebill-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-Os']

[lib]
crate-type = ["cdylib"]

[dependencies]
serde.workspace = true
serde_json.workspace = true
async-trait.workspace = true
futures.workspace = true
serde_repr.workspace = true
log.workspace = true
chrono.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tokio.workspace = true
tokio_with_wasm.workspace = true
fern = "0.7.1"
serde-wasm-bindgen = "0.6.5"
wasm-bindgen = "0.2"
js-sys = "0.3.77"
wasm-bindgen-futures = "0.4.50"
nostr-sdk.workspace = true
console_error_panic_hook = "0.1.7"
console_log = { version = "1.0.0", features = ["color"] }
tsify = { version = "0.5.5", features = ["js"] }
bcr-ebill-api.workspace = true
bcr-ebill-transport.workspace = true
base64.workspace = true
url.workspace = true
